// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render arguments 1`] = `
<div
  className="root"
>
  <Consumer(Argument)
    description="Converts foo to bar"
    key="Foo"
    name="Foo"
    type={
      Object {
        "name": "Array",
      }
    }
  />
  <Consumer(Argument)
    key="Foo"
    name="Foo"
  />
</div>
`;

exports[`renderer should render heading 1`] = `
<div
  className="root"
>
  <div
    className="headingWrapper"
  >
    <Consumer(Heading)
      level={5}
    >
      Arguments
    </Consumer(Heading)>
  </div>
  <Consumer(Argument)
    key="Foo"
    name="Foo"
  />
</div>
`;
